--- a/index.html
+++ b/index.html
@@ -4,19 +4,267 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Price</title>
+    <title>Portfolio</title>
     <link rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css'>
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
-    <a class="btn btn-default" href="#" role="button">Link</a>
-<button class="btn btn-default" type="submit">Button</button>
-<input class="btn btn-default" type="button" value="Input">
-<input class="btn btn-default" type="submit" value="Submit">
+    <body id="page-top" class="index">
+
+      <!-- Navigation -->
+      <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header page-scroll">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#page-top">Roy Schuyler</a>
+                  <img class="img-responsive icon-bar" src="img/starForPortfolio.jpg">
+              </div>
+
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav navbar-right">
+                      <li class="hidden">
+                          <a href="#page-top"></a>
+                      </li>
+                      <li class="page-scroll">
+                          <a href="#portfolio">Portfolio</a>
+                      </li>
+                      <li class="page-scroll">
+                          <a href="#about">About</a>
+                      </li>
+                      <li class="page-scroll">
+                          <a href="#contact">Contact</a>
+                      </li>
+                  </ul>
+              </div>
+              <!-- /.navbar-collapse -->
+          </div>
+          <!-- /.container-fluid -->
+      </nav>
+
+      <!-- Header -->
+      <header>
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12">
+                      <img class="img-responsive main" src="img/IMG_0430.jpg" alt="">
+                      <div class="intro-text">
+                          <span class="name">Roy Schuyler</span>
+                          <hr class="star-light">
+                          <span class="skills">Web Developer - Web Designer - User Experience Designer</span>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </header>
+
+      <!-- Portfolio Grid Section -->
+      <section id="portfolio">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12 text-center">
+                      <h2>Portfolio</h2>
+                      <hr class="star-primary">
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="http://royschuyler.github.io/new-phaser/" class="portfolio-link" data-toggle="modal">
+                          <div class="caption">
+                              <div class="caption-content">
+                                  <i class="fa fa-search-plus fa-3x"></i>
+                              </div>
+                          </div>
+                          <img src="img/gameForPortfolio1.png" class="img-responsive" alt="">
+                      </a>
+                  </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                          <div class="caption">
+                              <div class="caption-content">
+                                  <i class="fa fa-search-plus fa-3x"></i>
+                              </div>
+                          </div>
+                          <img src="http://i.imgur.com/SaAk3s7.gif" class="img-responsive" alt="">
+                      </a>
+                  </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                          <div class="caption">
+                              <div class="caption-content">
+                                  <i class="fa fa-search-plus fa-3x"></i>
+                              </div>
+                          </div>
+                          <img src="http://i.imgur.com/SaAk3s7.gif" class="img-responsive" alt="">
+                      </a>
+                  </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                          <div class="caption">
+                              <div class="caption-content">
+                                  <i class="fa fa-search-plus fa-3x"></i>
+                              </div>
+                          </div>
+                          <img src="http://i.imgur.com/SaAk3s7.gif" class="img-responsive" alt="">
+                      </a>
+                  </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                          <div class="caption">
+                              <div class="caption-content">
+                                  <i class="fa fa-search-plus fa-3x"></i>
+                              </div>
+                          </div>
+                          <img src="http://i.imgur.com/SaAk3s7.gif" class="img-responsive" alt="">
+                      </a>
+                  </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                          <div class="caption">
+                              <div class="caption-content">
+                                  <i class="fa fa-search-plus fa-3x"></i>
+                              </div>
+                          </div>
+                          <img src="http://i.imgur.com/SaAk3s7.gif" class="img-responsive" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- About Section -->
+      <section class="success" id="about">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12 text-center">
+                      <h2>About</h2>
+                      <hr class="star-light">
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-lg-4 col-lg-offset-2">
+                      <p>About me...hmmm.</p>
+                  </div>
+                  <div class="col-lg-4">
+                      <p>More About mee. hmmmm...</p>
+                  </div>
+                  <div class="col-lg-8 col-lg-offset-2 text-center">
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12 text-center">
+                      <h2>Contact Me</h2>
+                      <hr class="star-primary">
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-lg-8 col-lg-offset-2">
+                      <form name="sentMessage" id="contactForm" novalidate>
+                          <div class="row control-group">
+                              <div class="form-group col-xs-12 floating-label-form-group controls">
+                                  <label>Name</label>
+                                  <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+                                  <p class="help-block text-danger"></p>
+                              </div>
+                          </div>
+                          <div class="row control-group">
+                              <div class="form-group col-xs-12 floating-label-form-group controls">
+                                  <label>Email Address</label>
+                                  <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                  <p class="help-block text-danger"></p>
+                              </div>
+                          </div>
+                          <div class="row control-group">
+                              <div class="form-group col-xs-12 floating-label-form-group controls">
+                                  <label>Phone Number</label>
+                                  <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                  <p class="help-block text-danger"></p>
+                              </div>
+                          </div>
+                          <div class="row control-group">
+                              <div class="form-group col-xs-12 floating-label-form-group controls">
+                                  <label>Message</label>
+                                  <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                  <p class="help-block text-danger"></p>
+                              </div>
+                          </div>
+                          <br>
+                          <div id="success"></div>
+                          <div class="row">
+                              <div class="form-group col-xs-12">
+                                  <button type="submit" class="btn btn-success btn-lg">Send</button>
+                              </div>
+                          </div>
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="text-center">
+          <div class="footer-above">
+              <div class="container">
+                  <div class="row">
+                      <div class="footer-col col-md-4">
+                          <h3>Location</h3>
+                          <p>5209 Michigan Ave<br>Nashville, TN 37209</p>
+                      </div>
+                      <div class="footer-col col-md-4">
+                          <h3>Other Links about me</h3>
+                          <ul class="list-inline">
+                              <li>
+                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                              </li>
+                              <li>
+                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                              </li>
+                              <li>
+                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                              </li>
+                              <li>
+                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                              </li>
+                              <li>
+                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                              </li>
+                          </ul>
+                      </div>
+                      <div class="footer-col col-md-4">
+                          <h3>Not Sure...</h3>
+                          <p>More Info Here</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="footer-below">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-12">
+                          Thankyou for visiting!
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </footer>
 
 
 
-  <script src='bower_components/jquery/dist/jquery.min.js'></script>
-  <script src='script.js'></script>
+
+
+    <script src='bower_components/jquery/dist/jquery.min.js'></script>
+    <script src='script.js'></script>
   </body>
 </html>
