added animation, linkedin

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                   </button>
                   <a class="navbar-brand" href="#page-top">Roy Schuyler</a>
                   <img class="img-responsive icon-bar" src="img/starForPortfolio.jpg">
+<!--                   <div class="left-nav">Software Developer</div> -->
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,13 +33,13 @@
                       <li class="hidden">
                           <a href="#page-top"></a>
                       </li>
-                      <li class="page-scroll">
+                      <li class="page-scroll page-scroll-1">
                           <a href="#portfolio">Portfolio</a>
                       </li>
-                      <li class="page-scroll">
+                      <li class="page-scroll page-scroll-1">
                           <a href="#about">About</a>
                       </li>
-                      <li class="page-scroll">
+                      <li class="page-scroll page-scroll-1">
                           <a href="#contact">Contact</a>
                       </li>
                   </ul>
@@ -57,7 +58,7 @@
                       <div class="intro-text">
                           <span class="name">Roy Schuyler</span>
                           <hr class="star-light">
-                          <span class="skills">Web Developer - Web Designer - User Experience Designer</span>
+                          <span class="skills">Software Developer - Web Designer - User Experience Designer</span>
                       </div>
                   </div>
               </div>
@@ -131,7 +132,7 @@
                                   <i class="fa fa-search-plus fa-3x"></i>
                               </div>
                           </div>
-                          <img src="http://i.imgur.com/SaAk3s7.gif" class="img-responsive" alt="">
+                          <iframe src="https://vine.co/v/MlDJp2UiEUV/embed/simple" width="600" height="600" frameborder="0"></iframe><script src="https://platform.vine.co/static/scripts/embed.js"></script>
                       </a>
                   </div>
               </div>
@@ -149,17 +150,16 @@
               </div>
               <div class="row">
                   <div class="col-lg-4 col-lg-offset-2">
-                      <p>About me...hmmm.</p>
+                      <p>Self starter, creative thinker, love to take a deep dive into complex problem solving. Looking to join a strong team as a junior software developer. Born and rasied in Nashville, love seeing the tech community thrive here.</p>
                   </div>
                   <div class="col-lg-4">
-                      <p>More About mee. hmmmm...</p>
+                      <p>A recent graduate of Nashville Software School where I had six months of 40+ hours a week training, working through all stages of web development. Intense training and accelerated learning in the latest technologies. Experience in solo and group full stack software development.</p>
                   </div>
                   <div class="col-lg-8 col-lg-offset-2 text-center">
                   </div>
               </div>
           </div>
       </section>
-
       <!-- Contact Section -->
       <section id="contact">
           <div class="container">
@@ -226,7 +226,7 @@
                           <h3>Other Links about me</h3>
                           <ul class="list-inline">
                               <li>
-                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                  <a href="https://www.linkedin.com/in/royschuyler" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                               </li>
                               <li>
                                   <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
@@ -265,6 +265,6 @@
 
 
     <script src='bower_components/jquery/dist/jquery.min.js'></script>
-    <script src='script.js'></script>
+    <script src='js/script.js'></script>
   </body>
 </html>
