added images styled links

--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
                           <h3>Other Links about me</h3>
                           <ul class="list-inline">
                               <li>
-                                  <a href="https://www.linkedin.com/in/royschuyler" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                  <a href="https://www.linkedin.com/in/royschuyler"><img class="linkedin" src="./img/linkedin-share.png"></a>
                               </li>
                               <li>
-                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                  <a href="https://instagram.com/royschuyler/"><img class="insta" src="./img/Instagram-Icon.png"></a>
                               </li>
                               <li>
-                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                                  <a href="https://github.com/royschuyler"><img class="github" src="./img/github.png"</a>
                               </li>
                               <li>
-                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                  <a href="https://vine.co/u/920443476947116032"> <img class="vine" src="./img/vine1.png"></a>
                               </li>
                               <li>
                                   <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
