--- a/index.html
+++ b/index.html
@@ -165,49 +165,40 @@
           <div class="container">
               <div class="row">
                   <div class="col-lg-12 text-center">
-                      <h2>Contact Me</h2>
+                      <h2>Skills</h2>
                       <hr class="star-primary">
                   </div>
               </div>
               <div class="row">
-                  <div class="col-lg-8 col-lg-offset-2">
-                      <form name="sentMessage" id="contactForm" novalidate>
-                          <div class="row control-group">
-                              <div class="form-group col-xs-12 floating-label-form-group controls">
-                                  <label>Name</label>
-                                  <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                  <p class="help-block text-danger"></p>
-                              </div>
-                          </div>
-                          <div class="row control-group">
-                              <div class="form-group col-xs-12 floating-label-form-group controls">
-                                  <label>Email Address</label>
-                                  <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                  <p class="help-block text-danger"></p>
-                              </div>
-                          </div>
-                          <div class="row control-group">
-                              <div class="form-group col-xs-12 floating-label-form-group controls">
-                                  <label>Phone Number</label>
-                                  <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                  <p class="help-block text-danger"></p>
-                              </div>
-                          </div>
-                          <div class="row control-group">
-                              <div class="form-group col-xs-12 floating-label-form-group controls">
-                                  <label>Message</label>
-                                  <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                  <p class="help-block text-danger"></p>
-                              </div>
-                          </div>
-                          <br>
-                          <div id="success"></div>
-                          <div class="row">
-                              <div class="form-group col-xs-12">
-                                  <button type="submit" class="btn btn-success btn-lg">Send</button>
-                              </div>
-                          </div>
-                      </form>
+                  <div class="col-lg-1 col-lg-offset-1">
+                    <img class="skills" src="./img/html-5.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills" src="./img/css-3.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills" src="./img/javascript.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills word" src="./img/nodejs.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills word" src="./img/express.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills" src="./img/bootstrap.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills" src="./img/angular.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills word" src="./img/jquery.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills word" src="./img/mongodb.svg">
+                  </div>
+                  <div class="col-lg-1">
+                    <img class="skills" src="./img/postgresql.svg">
                   </div>
               </div>
           </div>
@@ -219,11 +210,11 @@
               <div class="container">
                   <div class="row">
                       <div class="footer-col col-md-4">
-                          <h3>Location</h3>
-                          <p>5209 Michigan Ave<br>Nashville, TN 37209</p>
+                          <h3></h3>
+                          <p></p>
                       </div>
                       <div class="footer-col col-md-4">
-                          <h3>Other Links about me</h3>
+                          <h3>Links about me</h3>
                           <ul class="list-inline">
                               <li>
                                   <a href="https://www.linkedin.com/in/royschuyler"><img class="linkedin" src="./img/linkedin-share.png"></a>
@@ -237,14 +228,11 @@
                               <li>
                                   <a href="https://vine.co/u/920443476947116032"> <img class="vine" src="./img/vine1.png"></a>
                               </li>
-                              <li>
-                                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                              </li>
                           </ul>
                       </div>
                       <div class="footer-col col-md-4">
-                          <h3>Not Sure...</h3>
-                          <p>More Info Here</p>
+                          <h3></h3>
+                          <p></p>
                       </div>
                   </div>
               </div>
